bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: ';' expected but ',' found.
    case"R"=>droite(),avance()
                     ^BDR2:4: error: ';' expected but ',' found.
    case"L"=>gauche(),avance()
                     ^BDR2:5: error: ';' expected but ',' found.
    case"I"=>gauche(),gauche(),avance()
                     ^BDR2:7: error: ';' expected but ',' found.
    case"B"=>avance(),avance()
                     ^BDR2:8: error: ';' expected but ',' found.
    case"C"=>avance(),avance(),avance()
                     ^BDR2:9: error: ';' expected but ',' found.
    case"D"=>avance(),avance(),avance(),avance()
                     ^BDR2:10: error: ';' expected but ',' found.
    case"E"=>avance(),avance(),avance(),avance(),avance()
                     ^BDR2:11: error: ';' expected but ',' found.
   case"F"=>avance(),avance(),avance(),avance(),avance(),avance()
                    ^BDR2:13: error: ';' expected but ',' found.
    case"Y"=>recule(),recule()
                     ^BDR2:14: error: ';' expected but ',' found.
    case"X"=>recule(),recule(),recule()
                     ^BDR2:15: error: ';' expected but ',' found.
    case"W"=>recule(),recule(),recule(),recule()
                     ^BDR2:16: error: ';' expected but ',' found.
    case"V"=>recule(),recule(),recule(),recule(),recule()
                     ^BDR2:17: error: ';' expected but ',' found.
    case"U"=>recule(),recule(),recule(),recule(),recule(),recule()
                     ^